objects/APTS_Account_Default_Answer__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Default Answers</relationshipLabel>
        <relationshipName>Account_Default_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Wizard_Input_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
        <relationshipLabel>Account Default Answers</relationshipLabel>
        <relationshipName>Account_Default_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Default Answer</label>
    <nameField>
        <displayFormat>ADA-{0000}</displayFormat>
        <label>Account Default Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Default Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>